--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "tachyons": "^4.11.1"
   },
