--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "tachyons": "^4.11.1"
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
