--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-boilerplate",
+  "name": "Cloth-Store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.0",
     "node-sass": "^4.13.1",
@@ -14,7 +15,6 @@
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
