--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 firebase/
+firebase.js
 # dependencies
 node_modules/
 /.pnp
