--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.1.0"
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
