--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Cloth-Store",
+  "name": "Cloth Store",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
