--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "R-Gallery",
-  "name": "Random Images Gallery",
+  "short_name": "Cloth",
+  "name": "Cloth Store",
   "icons": [
     {
       "src": "crown.svg",
