--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cloth Store",
+  "name": "Cloth_Store",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -18,7 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
-    "react-toast-notifications": "^2.4.0",
+    "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
