--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
