--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.6.2",
     "react-icons": "^3.9.0",
     "react-particles-js": "^3.2.0",
     "react-redux": "^7.2.0",
