--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.0",
     "node-sass": "^4.13.1",
