--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Cloth_Store_server",
+  "name": "Cloth-Store-server",
   "version": "1.0.0",
   "engines": {
     "node": "10.20.1",
     "npm": "6.14.4"
   },
   "scripts": {
-    "client": "cd client && npm start",
+    "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
@@ -15,16 +15,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "stripe": "6.28.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/register": "^7.9.0",
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.19.1"
   }
 }
