--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,28 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "firebase": "^7.14.0",
-    "node-sass": "^4.13.1",
+    "bootstrap": "^4.5.0",
+    "firebase": "^7.14.3",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^5.6.2",
-    "react-icons": "^3.9.0",
-    "react-particles-js": "^3.2.0",
+    "react-hook-form": "^5.7.2",
+    "react-icons": "^3.10.0",
+    "react-particles-js": "^3.2.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "graphql": "^15.0.0",
+    "react-apollo": "^3.1.5",
+    "apollo-boost": "^0.4.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,10 +54,11 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.5"
   }
 }
