--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Cloth",
-  "name": "Cloth Store",
+  "short_name": "Cloth Store",
+  "name": "Cloth Store <911/>",
   "icons": [
     {
       "src": "crown.svg",
