--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "lodash.flowright": "^3.5.0",
     "stripe": "8.51.0"
   },
