--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,11 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "graphql": "^15.0.0",
     "react-apollo": "^3.1.5",
-    "apollo-boost": "^0.4.8"
+    "apollo-boost": "^0.4.8",
+    "lodash.flowright": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
