--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cloth-Store-server",
+  "name": "Cloth-Store",
   "version": "1.0.0",
   "engines": {
     "node": "10.20.1",
@@ -11,20 +11,20 @@
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "test-client": "cd client && npm run test"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "^1.7.4",
+    "compression": "1.7.4",
     "cors": "2.8.5",
-    "dotenv": "8.2.0",
+    "dotenv": "7.0.0",
     "express": "^4.16.4",
-    "express-sslify": "^1.2.0",
-    "lodash.flowright": "^3.5.0",
-    "stripe": "8.51.0"
+    "express-sslify": "1.2.0",
+    "stripe": "6.28.0"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.3"
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.19.1"
   }
 }
