--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -6,6 +6,17 @@
       "src": "crown.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "crown.svg",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
+    },
+    {
+      "src": "crown.svg",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
